--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,31 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity">
+    tools:context=".MainActivity"
+    android:orientation="vertical">
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical"
-        tools:layout_editor_absoluteX="98dp"
-        tools:layout_editor_absoluteY="137dp">
+   <com.example.galeria.SeleccionControl
+       android:id="@+id/seleccionControl"
+       android:layout_width="match_parent"
+       android:layout_height="wrap_content"
+       android:background="#EDEDED"/>
 
-        <ImageView
-            android:id="@+id/imagenPrin"
-            android:layout_width="200dp"
-            android:layout_height="400dp"
-            app:srcCompat="@drawable/foto"
-            android:layout_gravity="center"
-            android:scaleType="fitXY"
-           />
-
-        <Button
-            android:id="@+id/boton"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="Button" />
-    </LinearLayout>
-</androidx.constraintlayout.widget.ConstraintLayout>
+</LinearLayout>
