--- a/app/src/main/res/layout/activity_filtros.xml
+++ b/app/src/main/res/layout/activity_filtros.xml
@@ -26,6 +26,22 @@
             android:id="@+id/boton"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Button" />
+            android:text="foto" />
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+            <Button
+                android:id="@+id/cambiar"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Filtro"  />
+            <Button
+                android:id="@+id/regresar"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Regresar" />
+
+        </LinearLayout>
     </LinearLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
